--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-590-topic-listing
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html">
+                                                <a href="https://buddymap.kenrick.app/" target="_blank" class="custom-block bg-white shadow-lg text-decoration-none">
                                                     <div class="d-flex">
                                                         <div>
                                                             <h5 class="mb-2">BuddyMaps</h5>
