--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-590-topic-listing
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <span>Kenrick.App</span>
+                    <span>KenricK.app</span>
                 </a>
 
                 <div class="d-lg-none ms-auto me-4">
