--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-590-topic-listing
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="mb-4">Welcome to Kenrick.app</h1>
+                            <h2 class="mb-4">Welcome to KenricK.app</h1>
                         </div>
 
                     </div>
