--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 
     <!-- ✅ Google AdSense Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4202853978264568"
-        crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script>
+<!-- kenrick.app -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4202853978264568"
+     data-ad-slot="3283313460"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <!-- CSS FILES -->        
     <link rel="preconnect" href="https://fonts.googleapis.com">   
