--- a/index.html
+++ b/index.html
@@ -1,171 +1,179 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <title>KenricK.app</title>
 
-    <title>KenricK.app</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">   
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap" rel="stylesheet">
 
-    <!-- ✅ Google AdSense Script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4202853978264568"
-     crossorigin="anonymous"></script>
-<!-- kenrick.app -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4202853978264568"
-     data-ad-slot="3283313460"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+  <!-- CSS Files -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap-icons.css" rel="stylesheet">
+  <link href="css/templatemo-topic-listing.css" rel="stylesheet">
 
-    <!-- CSS FILES -->        
-    <link rel="preconnect" href="https://fonts.googleapis.com">   
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/templatemo-topic-listing.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+    }
+
+    .custom-block {
+      padding: 16px;
+      border-radius: 16px;
+      transition: box-shadow 0.3s;
+    }
+
+    .custom-block:hover {
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+
+    .app-icon {
+      width: 64px;
+      height: 64px;
+      border-radius: 12px;
+      object-fit: cover;
+      margin-bottom: 12px;
+    }
+
+    .custom-block h5 {
+      font-size: 1.1rem;
+      margin-bottom: 8px;
+    }
+
+    .custom-block p {
+      font-size: 0.9rem;
+      margin-bottom: 12px;
+    }
+
+    .btn {
+      font-size: 0.8rem;
+      padding: 6px 10px;
+    }
+
+    @media (max-width: 768px) {
+      h2 {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
 </head>
-    
+
 <body id="top">
-    <main>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <span>KenricK.app</span>
-                </a>
+  <main>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <span>KenricK.app</span>
+        </a>
 
-                <div class="d-lg-none ms-auto me-4">
-                    <a href="https://www.linkedin.com/in/kenrick-aaron-mutyam-6135182ba/" target="_blank" class="navbar-icon bi-linkedin"></a>
-                </div>
+        <div class="d-lg-none ms-auto me-4">
+          <a href="https://www.linkedin.com/in/kenrick-aaron-mutyam-6135182ba/" target="_blank" class="navbar-icon bi-linkedin"></a>
+        </div>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-lg-5 me-lg-auto">
-                        <li class="nav-item"></li>
-                        <li class="nav-item dropdown"></li>
-                    </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-lg-5 me-lg-auto"></ul>
+          <div class="d-none d-lg-block">
+            <a href="https://www.linkedin.com/in/kenrick-aaron-mutyam-6135182ba/" target="_blank" class="navbar-icon bi-linkedin"></a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </main>
 
-                    <div class="d-none d-lg-block">
-                        <a href="https://www.linkedin.com/in/kenrick-aaron-mutyam-6135182ba/" target="_blank" class="navbar-icon bi-linkedin"></a>
+  <section class="explore-section section-padding" id="section_2">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h2 class="mb-4">Welcome to KenricK.app</h2>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="travel-tab" data-bs-toggle="tab" data-bs-target="#travel-pane" type="button" role="tab">Travel</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="games-tab" data-bs-toggle="tab" data-bs-target="#games-pane" type="button" role="tab">Games</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="tab-content" id="myTabContent">
+
+            <!-- Travel Tab -->
+            <div class="tab-pane fade show active" id="travel-pane" role="tabpanel">
+              <div class="row">
+                <!-- App Card -->
+                <div class="col-md-6 col-lg-4 col-12 mb-4">
+                  <div class="custom-block bg-white shadow-sm text-center">
+                    <img src="images/budymap.png" alt="BuddyMap" class="app-icon mx-auto">
+                    <h5>BuddyMap</h5>
+                    <p class="text-muted small">Find nearby Restaurants, Stores & More.</p>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <a href="https://buddymap.kenrick.app/" target="_blank" class="btn btn-primary">Launch</a>
+                      <button class="btn btn-outline-secondary" onclick="alert('Find places near you like: Restaurants 🍴, Supermarkets 🛒, Bookshops 📚, Vegetable Shops 🥦, Salons 💇, Malls 🏬')">Description</button>
                     </div>
+                  </div>
                 </div>
-            </div>
-        </nav>
-    </main>
 
-    <section class="explore-section section-padding" id="section_2">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h2 class="mb-4">Welcome to KenricK.app</h2>
+                <!-- Coming Soon -->
+                <div class="col-md-6 col-lg-4 col-12 mb-4">
+                  <div class="custom-block bg-white shadow-sm text-center">
+                    <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
+                    <h5>Coming Soon</h5>
+                    <p class="text-muted small">Exciting new app coming!</p>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-secondary" disabled>Launch</button>
+                      <button class="btn btn-outline-secondary" onclick="alert('Stay tuned for our next app release!')">Description</button>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
-        </div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="design-tab" data-bs-toggle="tab" data-bs-target="#design-tab-pane" type="button" role="tab" aria-controls="design-tab-pane" aria-selected="true">Travel</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="marketing-tab" data-bs-toggle="tab" data-bs-target="#marketing-tab-pane" type="button" role="tab" aria-controls="marketing-tab-pane" aria-selected="false">Games</button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade show active" id="design-tab-pane" role="tabpanel" aria-labelledby="Travel" tabindex="0">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
-                                    <div class="custom-block bg-white shadow-lg">
-                                        <a href="https://buddymap.kenrick.app/" target="_blank" class="custom-block bg-white shadow-lg text-decoration-none">
-                                            <div class="d-flex">
-                                                <div>
-                                                    <h5 class="mb-2">BuddyMaps</h5>
-                                                    <p class="mb-0">BuddyMap helps users find nearby places like: Restaurants 🍽️, Supermarkets 🛒, Bookstores 📚, Vegetable Shops 🥦, Salons 💇‍♂️, Shopping Malls 🏬</p>
-                                                </div>
-                                                <span class="badge bg-design rounded-pill ms-auto">14</span>
-                                            </div>
-                                            <img src="images/budymap.png" class="custom-block-image img-fluid" alt="">
-                                        </a>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
-                                    <div class="custom-block bg-white shadow-lg">
-                                        <a href="topics-detail.html">
-                                            <div class="d-flex">
-                                                <div>
-                                                    <h5 class="mb-2"></h5>
-                                                    <p class="mb-0">coming soon!</p>
-                                                </div>
-                                                <span class="badge bg-design rounded-pill ms-auto">75</span>
-                                            </div>
-                                            <img src="images/cmingsoon.pn.png" class="custom-block-image img-fluid" alt="">
-                                        </a>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 col-12">
-                                    <div class="custom-block bg-white shadow-lg">
-                                        <a href="topics-detail.html">
-                                            <div class="d-flex">
-                                                <div>
-                                                    <h5 class="mb-2"></h5>
-                                                    <p class="mb-0">coming soon!</p>
-                                                </div>
-                                                <span class="badge bg-design rounded-pill ms-auto">100</span>
-                                            </div>
-                                            <img src="images/cmingsoon.pn.png" class="custom-block-image img-fluid" alt="">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="tab-pane fade" id="marketing-tab-pane" role="tabpanel" aria-labelledby="marketing-tab" tabindex="0">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-3">
-                                    <div class="custom-block bg-white shadow-lg">
-                                        <a href="#" class="custom-block bg-white shadow-lg text-decoration-none" target="_blank">
-                                            <div class="d-flex">
-                                                <div>
-                                                    <h5 class="mb-2">ComingSoon!</h5>
-                                                    <p class="mb-0"></p>
-                                                </div>
-                                                <span class="badge bg-advertising rounded-pill ms-auto">30</span>
-                                            </div>
-                                            <img src="images/cmingsoon.pn.png" class="custom-block-image img-fluid" alt="">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div> <!-- End Tab Content -->
+            <!-- Games Tab -->
+            <div class="tab-pane fade" id="games-pane" role="tabpanel">
+              <div class="row">
+                <!-- Game Placeholder -->
+                <div class="col-md-6 col-lg-4 col-12 mb-4">
+                  <div class="custom-block bg-white shadow-sm text-center">
+                    <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
+                    <h5>Coming Soon</h5>
+                    <p class="text-muted small">Fun game launching soon!</p>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-secondary" disabled>Launch</button>
+                      <button class="btn btn-outline-secondary" onclick="alert('New games coming soon!')">Description</button>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </div>
-        </div>
-    </section>
 
-    <!-- Scripts -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/click-scroll.js"></script>
-    <script src="js/custom.js"></script>
+          </div> <!-- End Tab Content -->
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Scripts -->
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/click-scroll.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 </html>
