update 5.3[new apps coming  soon]

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="games-tab" data-bs-toggle="tab" data-bs-target="#games-pane" type="button" role="tab">Games</button>
           </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="ai-tab" data-bs-toggle="tab" data-bs-target="#ai-pane" type="button" role="tab">AI Tools</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="productivity-tab" data-bs-toggle="tab" data-bs-target="#productivity-pane" type="button" role="tab">Productivity</button>
+          </li>
         </ul>
       </div>
     </div>
@@ -118,7 +124,6 @@
             <!-- Travel Tab -->
             <div class="tab-pane fade show active" id="travel-pane" role="tabpanel">
               <div class="row">
-                <!-- App Card -->
                 <div class="col-md-6 col-lg-4 col-12 mb-4">
                   <div class="custom-block bg-white shadow-sm text-center">
                     <img src="images/budymap.png" alt="BuddyMap" class="app-icon mx-auto">
@@ -130,26 +135,12 @@
                     </div>
                   </div>
                 </div>
-
-                <!-- Coming Soon -->
-                <div class="col-md-6 col-lg-4 col-12 mb-4">
-                  <div class="custom-block bg-white shadow-sm text-center">
-                    <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
-                    <h5>Coming Soon</h5>
-                    <p class="text-muted small">Exciting new app coming!</p>
-                    <div class="d-flex justify-content-center gap-2 flex-wrap">
-                      <button class="btn btn-secondary" disabled>Launch</button>
-                      <button class="btn btn-outline-secondary" onclick="alert('Stay tuned for our next app release!')">Description</button>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
 
             <!-- Games Tab -->
             <div class="tab-pane fade" id="games-pane" role="tabpanel">
               <div class="row">
-                <!-- Game Placeholder -->
                 <div class="col-md-6 col-lg-4 col-12 mb-4">
                   <div class="custom-block bg-white shadow-sm text-center">
                     <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
@@ -164,7 +155,41 @@
               </div>
             </div>
 
-          </div> <!-- End Tab Content -->
+            <!-- AI Tools Tab -->
+            <div class="tab-pane fade" id="ai-pane" role="tabpanel">
+              <div class="row">
+                <div class="col-md-6 col-lg-4 col-12 mb-4">
+                  <div class="custom-block bg-white shadow-sm text-center">
+                    <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
+                    <h5>Coming Soon</h5>
+                    <p class="text-muted small">AI-powered tool launching soon!</p>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-secondary" disabled>Launch</button>
+                      <button class="btn btn-outline-secondary" onclick="alert('AI tools to boost productivity coming soon!')">Description</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Productivity Tab -->
+            <div class="tab-pane fade" id="productivity-pane" role="tabpanel">
+              <div class="row">
+                <div class="col-md-6 col-lg-4 col-12 mb-4">
+                  <div class="custom-block bg-white shadow-sm text-center">
+                    <img src="images/cmingsoon.pn.png" alt="Coming Soon" class="app-icon mx-auto">
+                    <h5>Coming Soon</h5>
+                    <p class="text-muted small">Productivity app launching soon!</p>
+                    <div class="d-flex justify-content-center gap-2 flex-wrap">
+                      <button class="btn btn-secondary" disabled>Launch</button>
+                      <button class="btn btn-outline-secondary" onclick="alert('Track tasks, goals, and more – coming soon!')">Description</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div> <!-- End tab-content -->
         </div>
       </div>
     </div>
